openwebrx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebrx
spec:
  selector:
    app: openwebrx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8073
